--- a/Claim System/wwwroot/css/Home.css
+++ b/Claim System/wwwroot/css/Home.css
@@ -18,14 +18,49 @@ height: 100vh;
     flex: 13;
     display:flex;
     flex-direction:column;
+    margin-top: 30px;
 }
 
 
 .ClaimSummary {
     flex: 1;
-    box-shadow: 0 2px 6px rgba(0,0,0.1);
+   
     margin-top: 3px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 15px;
+    margin-left: 0px;
+    margin-top: 8px;
 }
+
+.card {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    font-weight: bold;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+}
+
+    .card span {
+        display: block;
+        margin-top: 10px;
+        font-size: 20px;
+    }
+
+.card1 {
+    color: rgb(220, 193, 44);
+}
+
+.card2 {
+    color: green;
+}
+
+.card3 {
+    color: red;
+}
+
+
 
 .ClaimSection {
     flex: 5;
@@ -50,18 +85,73 @@ th {
 }
 
 .IconsArea {
-    position: relative;
-    width: 250px;
+    
     display: flex;
-flex-direction: column;
+    flex-direction: row;
 }
 
-    .IconsArea input {
+    
+
+.SearchBox {
+    margin-top: 40px;
+    margin-bottom: 20px;
+    width: 100%;
+    position: relative;
+    flex: 1;
+ 
+}
+
+    .SearchBox input {
         width: 100%;
-        padding: 10px 35px 10px 10px; /* add space for the icon */
-        border: 1px solid #ccc;
-        border-radius: 5px;
+        padding: 10px 10px 10px 15px; /* add space for icon */
+        border: 2px solid #ccc;
         font-size: 16px;
+        outline: none;
     }
 
+    .SearchBox i {
+        position: absolute;
+        right: 12px; /* place inside */
+        top: 50%;
+        transform: translateY(-50%);
+        color: #666;
+        cursor: pointer;
+      
+    }
+
+.ButtonArea {
+    display: flex;
+    flex-direction: row;
+    margin-left: 600px;
+    flex: 3;
+   
+}
+
+.ListSelection {
+    margin-top: 40px;
+    margin-bottom: 20px;
+    margin-right: 12px;
+    height: 50px;
+    width: 150px;
+}
+
+.btnClaimSubmit {
+    margin-top: 40px;
+    margin-bottom: 20px;
+    padding: 8px 15px 8px 15px;
+    margin-right: 12px;
+    height: 50px;
+    width: 150px;
+    border: none;
+}
+
+.btnUploadDoc {
+    margin-top: 40px;
+    margin-bottom: 8px;
+    padding: 8px 15px 5px 15px;
+    margin-right: 12px;
+    height: 50px;
+    width: 200px;
+    border: none;
+}
     
