--- a/Claim System/Views/Shared/_Layout.cshtml
+++ b/Claim System/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
             <div class="profileArea">
 
                 <div class="profilePhotoArea">
-                    <img class="profilePhoto" src="Images/Profile Picture.png" />
+                    <img class="profilePhoto" src="~/Images/Profile Picture.png" />
 
                 </div>
 
@@ -33,6 +33,7 @@
                     <a href="#"> <i class="fa-solid fa-gauge"></i> Dashboard</a>
                 </li>
                 <li><a href="#"> <i class="fa-solid fa-gauge"></i> Claims</a></li>
+                <li><a href="#"> <i class="fa-solid fa-gauge"></i> Upload Documents</a></li>
                 <li><a href="#"> <i class="fa-solid fa-gauge"></i> Sign Out</a></li>
             </ul>
 
