--- a/Claim System/Views/Home/Index.cshtml
+++ b/Claim System/Views/Home/Index.cshtml
@@ -8,27 +8,28 @@
 </head>
 
 <body>
+
     <div class="Box">
 
         <div class="PageTop">
-            <h2>Claims</h2>
+            <h2>Lecturer Dashboard</h2>
 
         </div>
 
-
+        
         <div class="PageBottom">
             
             <div class="ClaimSummary">
-                <div class="card">Pending<br><span class="card1">2</span></div>
-                <div class="card">Approved<br><span class="card2">2</span></div>
-                <div class="card">Rejected<br><span class="card3"> 2</span></div>
+                <div class="card">Pending Claims<br><span class="card1">2</span></div>
+                <div class="card">Approved Claims<br><span class="card2">2</span></div>
+                <div class="card">Rejected Claims<br><span class="card3"> 2</span></div>
             </div>
 
-            <!-- <h1>Recent Claims</h1>-->
+            
             <div class="IconsArea">
                
                 <div class="SearchBox">
-                    <input type="Text" placeholder="Search..."  />
+                    <input type="Text" placeholder="Search Claim ID..."  />
                     <i class="fas fa-search"></i>
                 </div>
                 <div class="ButtonArea">
@@ -38,8 +39,8 @@
                         <option>Rejection</option>
                         <option>Approved</option>
                     </select>
-                    <button class="btnClaimSubmit">File Claim</button>
-                    <button class="btnUploadDoc">Upload Documents</button>
+                    <button class="btnClaimSubmit"><i class="fa-solid fa-file-circle-plus"></i> File Claim</button>
+                    <button class="btnUploadDoc"><i class="fa-solid fa-upload"></i> Upload Documents</button>
 
                 </div>
                 
