--- a/Claim System/Views/Shared/_Layout.cshtml
+++ b/Claim System/Views/Shared/_Layout.cshtml
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Claim_System.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <header>
@@ -32,9 +34,9 @@
                 <li>
                     <a href="#"> <i class="fa-solid fa-gauge"></i> Dashboard</a>
                 </li>
-                <li><a href="#"> <i class="fa-solid fa-gauge"></i> Claims</a></li>
-                <li><a href="#"> <i class="fa-solid fa-gauge"></i> Upload Documents</a></li>
-                <li><a href="#"> <i class="fa-solid fa-gauge"></i> Sign Out</a></li>
+                <li><a href="#"> <i class="fa-solid fa-file-circle-plus"></i> File Claim</a></li>
+                <li><a href="#"> <i class="fa-solid fa-upload"></i> Upload Documents</a></li>
+                <li><a href="#" id="openLogin"> <i class="fa-solid fa-right-from-bracket"></i> Sign Out</a></li>
             </ul>
 
         </nav>
@@ -45,10 +47,54 @@
         </main>
     </div>
 
+
+    <!--Modal code-->
+    <div id="loginModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Login</h2>
+            <form method="post" action="/Account/Login">
+                <label>Username</label>
+                <input type="text" name="Username" placeholder="Enter Username" required />
+
+                <label>Password</label>
+                <input type="password" name="Password" placeholder="Enter Password" required />
+
+                <button type="submit">Login</button>
+            </form>
+        </div>
+    </div>
+
+    <script>
+    // Get modal and elements
+    var modal = document.getElementById("loginModal");
+    var openBtn = document.getElementById("openLogin");
+    var closeBtn = document.getElementsByClassName("close")[0];
+
+    // Open modal when "Login" link is clicked
+    openBtn.onclick = function (e) {
+    e.preventDefault(); // prevent page reload
+    modal.style.display = "block";
+    };
+
+    // Close modal when (x) clicked
+    closeBtn.onclick = function () {
+    modal.style.display = "none";
+    };
+
+    // Close modal when clicking outside content
+    window.onclick = function (event) {
+    if (event.target == modal) {
+    modal.style.display = "none";
+    }
+    };
+    </script>
    
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
+
+
 </body>
 </html>
