--- a/Claim System/wwwroot/css/site.css
+++ b/Claim System/wwwroot/css/site.css
@@ -74,3 +74,32 @@
 
 }
 
+
+
+/*Modal code*/
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1050;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.6);
+}
+
+.modal-content {
+    background-color: #fff;
+    margin: 10% auto;
+    padding: 20px;
+    width: 300px;
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+}
+
+.close {
+    float: right;
+    font-size: 20px;
+    cursor: pointer;
+}
